fizzBuzz in page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>FizzBuzz</title>
 </head>
 <body>
-    <div id="container">lorem</div>
-
+    <div class="page-content">
+        <h1>FizzBuzzDom</h1>
+        <div id="container"></div>
+    </div>
+    
     <script href="text/javascript" src="js/myscript.js"></script>
 </body>
 </html>
